add_executable(lab3_m1.elf main_m1.c)
target_link_libraries(lab3_m1.elf ${330_LIBS} intervalTimer buttons_switches)
set_target_properties(lab3_m1.elf PROPERTIES LINKER_LANGUAGE CXX)

add_executable(lab3_m2.elf main_m2.c)
target_link_libraries(lab3_m2.elf ${330_LIBS} intervalTimer buttons_switches)
set_target_properties(lab3_m2.elf PROPERTIES LINKER_LANGUAGE CXX)